fixed nav bar size on mobile devices to not take up as much of the screen and modded icon sizes also to fit

--- a/static/css/base.css
+++ b/static/css/base.css
@@ -289,12 +289,37 @@ input[name='q']::placeholder {
         left: 0;
         z-index: 1030;
     }
+
+    .header-container {
+        padding-top: 164px;
+    }
 }
 
 /* pad the top a bit when navbar is collapsed on mobile */
 @media (max-width: 991px) {
 
+    .header-container {
+        padding-top: 164px;
+    }
+
     body {
         height: calc(100vh - 116px);
+    }
+
+    .display-4.logo-font.text-black {
+        font-size: 2rem;
+    }
+
+    .nav-link {
+        padding: 0.15rem;
+    }
+
+    .nav-link i.fa-lg {
+        font-size: 1rem;
+    }
+
+    .navbar-toggler {
+        padding: .6rem .6rem;
+        font-size: 1rem;
     }
 }
